# pc-shops-parser

./: .gitignore  Dockerfile  LICENSE  README.md  celery_commands.txt  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
main/: admin.py  apps.py  models.py  tasks.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py  0002_alter_product_site.py  0003_alter_product_unique_together.py  0004_alter_product_price.py  0005_alter_product_options_alter_product_created_at_and_more.py
main/parsers/: asaxiy_parser.py  glotr_parser.py  mediapark_parser.py  noutuz_parser.py  zoodmall_parser.py
main/services/: product_service.py
main/templates/main/: about.html  index.html  product_detail.html  products_list.html
nginx/: default.conf
project/: __init__.py  celery.py  jazzmin.py  settings.py  urls.py
static/css/: style.css
templates/: 404.html  base.html
